--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_API_SERVER=http://localhost:3000
-REACT_APP_API_RECAPTCHA=6LFBuauuajua78as7v7sd7as6sa6sa8c86as
+#REACT_APP_API_RECAPTCHA_SITE_KEY=your_recaptcha_site_key
